--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram-min.webp" alt="" height="20" width="20"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram-min.webp" alt="Logo d'instagram" aria-label="Voir notre instagram" height="20" width="20"></a></li>
 		</ul>
 	</div>
 </div>
@@ -33,13 +33,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp" class="d-block w-100" width="885" height="410" alt="...">
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp" class="d-block w-100" width="885" height="410" alt="Image d'un homme qui marche">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min.webp" loading="lazy" class="d-block w-100"  width="885" height="410" alt="...">
+				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min.webp" loading="lazy" class="d-block w-100"  width="885" height="410" alt="Photohraphie d'une foule">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min.webp" loading="lazy" class="d-block w-100"  width="885" height="410" alt="...">
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min.webp" loading="lazy" class="d-block w-100"  width="885" height="410" alt="Photographie d'un mariage">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -54,7 +54,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina-min.webp" loading="lazy" width="350" height="350">
+		<img src="./assets/images/nina-min.webp" loading="lazy" width="350" height="350" alt="Photographie de Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">À propos de moi</h2>
@@ -67,15 +67,15 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp" height="450" width="450" loading="lazy"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp" height="450" width="450" loading="lazy"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp" height="450" width="450" loading="lazy"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp" height="450" width="450" loading="lazy"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp" height="450" width="450" loading="lazy"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp" height="450" width="450" loading="lazy"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash-min.webp" height="450" width="450" loading="lazy"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp" height="450" width="450" loading="lazy"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp" height="450" width="450" loading="lazy"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp" height="450" width="450" loading="lazy" alt="Photographie d'un concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp" height="450" width="450" loading="lazy" alt="Portrait d'un homme"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp" height="450" width="450" loading="lazy"  alt="Photographie d'une femme"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp" height="450" width="450" loading="lazy" alt="Image de personnes qui se prennent la main"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp" height="450" width="450" loading="lazy" alt="Portrait d'un homme qui ferme les yeux"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp" height="450" width="450" loading="lazy" alt="Photographie d'un couple de mariés"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash-min.webp" height="450" width="450" loading="lazy" alt="Portrait d'une femme"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp" height="450" width="450" loading="lazy" alt="Photographie d'un chanteur"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp" height="450" width="450" loading="lazy" alt="Photographie d'une femme devant son ordinateur"/>
 		</div>
 	</div>
 	<div class="quote">
@@ -147,7 +147,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera-min.webp"  height="400" width="400" loading="lazy">
+			<img src="./assets/images/camera-min.webp"  height="400" width="400" loading="lazy" alt="Illustration d'une caméra">
 		</div>
 	</div>
 </div>
