--- a/index.html
+++ b/index.html
@@ -2,13 +2,45 @@
 <html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<title>Nina Carducci | Photographe</title>
+	<meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle. Spécialisée dans la photographie de paysages, portraits, et événements, Nina capture des moments uniques avec créativité et passion. Explorez ses projets et contactez-la pour vos besoins en photographie.">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<meta charset="UTF-8">
-	<title>Nina Carducci | Photographe</title>
+
+	<meta property="og:type" content="profile">
+	<meta property="og:title" content="Nina Carducci">
+	<meta property="og:url" content="https://ninacarducci.github.io/">
+	<meta property="og:image" content="https://leprovostnoam.github.io/oc-p5/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp">
+	<meta property="og:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle. Spécialisée dans la photographie de paysages, portraits, et événements, Nina capture des moments uniques avec créativité et passion. Explorez ses projets et contactez-la pour vos besoins en photographie.">
+	<meta property="profile:first_name" content="Nina">
+	<meta property="profile:last_name" content="Carducci">
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carducci Photographe",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "FR"
+		  },
+		  "telephone": "+33 5 56 67 78 89",
+		  "openingHours": "Mo-Fr 10:00-19:00",
+		  "image": "URL_de_l'image_de_votre_entreprise_ou_logo",
+		  "priceRange": "$$",
+		  "geo": {
+			"@type": "GeoCoordinates",
+			"latitude": "44.837789",
+			"longitude": "-0.57918"
+		  }
+		}
+	</script>		
 </head>
 <body>
 <div class="top-header">
