Ajout de la bannière du site pour le schema.org

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		  },
 		  "telephone": "+33 5 56 67 78 89",
 		  "openingHours": "Mo-Fr 10:00-19:00",
-		  "image": "URL_de_l'image_de_votre_entreprise_ou_logo",
+		  "image": "https://leprovostnoam.github.io/oc-p5/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp",
 		  "priceRange": "$$",
 		  "geo": {
 			"@type": "GeoCoordinates",
