Utilisation de la version minifiée de boostrap css.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Nina Carducci | Photographe</title>
 	<meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle. Spécialisée dans la photographie de paysages, portraits, et événements, Nina capture des moments uniques avec créativité et passion. Explorez ses projets et contactez-la pour vos besoins en photographie.">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
