Modificiation de la photo de profil

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina2.webp" loading="lazy" width="350" height="350" alt="Photographie de Nina Carducci">
+		<img src="./assets/images/nina1-min1.webp" loading="lazy" width="400" height="400" alt="Photographie de Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">À propos de moi</h2>
